amd64: Update TODO

--- a/ir/be/amd64/TODO
+++ b/ir/be/amd64/TODO
@@ -13,6 +13,7 @@ Improve Quality:
 - Immediate32 matching could be better and match SymConst, Add(SymConst, Const)
   combinations where possible. Be careful with PIC code this may usually not
   be legal!
+- Support Destination Address Mode
 - Match Immediate + Address mode for Cmp
 - Support swapping of cmp arguments (see ins_permuted in ia32 backend)
 - Support Read-Modify-Store operations (aka destination address mode)
